# design-pattern-practice

1st-week/: 1-ugly-code.cpp  2-apply-strategy-pattern.cpp  3-apply-template-method-pattern.cpp  4-apply-lambda-expression.cpp  CMakeLists.txt
2nd-week/: 1_smelly_code.cpp  2_apply_observer_pattern_using_push_model.cpp  3_apply_observer_pattern_using_pull_model.cpp  CMakeLists.txt  file_handler.hpp  generator.hpp  message.hpp  resource_utilization.hpp
3rd-week/: 1_smelly_code.cpp  2_apply_decorator_pattern.cpp  CMakeLists.txt
4th-week/: 1_apply_factory_pattern.cpp  CMakeLists.txt
5th-week/: CMakeLists.txt  apply_singleton_pattern.cpp  random.hpp
6th-week/: CMakeLists.txt  apply-command-pattern.cpp
7th-week/: CMakeLists.txt  apply_adapter_pattern.cpp  apply_facade_pattern.cpp  apply_facade_pattern.hpp  mock_app_test.hpp
8th-week/: CMakeLists.txt  apply_template_method.cpp
