cmake_minimum_required(VERSION 2.8)
add_definitions("-Wall -O3 -std=c++17")
add_executable(1_smelly_code 1_smelly_code.cpp)
add_executable(2_apply_observer_pattern_using_push_model 2_apply_observer_pattern_using_push_model.cpp)
add_executable(3_apply_observer_pattern_using_pull_model 3_apply_observer_pattern_using_pull_model.cpp)
